# EK_AutoNOMOS_Sim

./: .aux_file.txt.swp  .gitignore  README.md  aux_file.txt  install.sh
AutoNOMOS_simulation/src/: CMakeLists.txt
AutoNOMOS_simulation/src/autonomos_gazebo/: ackermann_plugin.cpp  ackermann_plugin.h  package.xml
AutoNOMOS_simulation/src/autonomos_gazebo/config/: autonomos_gazebo_control.yaml
AutoNOMOS_simulation/src/autonomos_gazebo/launch/: curved_road.launch  empty_autonomous.launch  straight_road.launch
AutoNOMOS_simulation/src/autonomos_gazebo/models/AutoNOMOS_mini/: model.sdf
AutoNOMOS_simulation/src/autonomos_gazebo/models/AutoNOMOS_straight_road/: model.sdf
AutoNOMOS_simulation/src/autonomos_gazebo/worlds/: straight_road.world
AutoNOMOS_simulation/src/autonomos_simulation/: CMakeLists.txt  autoNOMOS_gazebo_bridge.cpp  package.xml  robot_pose_publisher.cpp  tf2_broadcaster_node.cpp  torque_ctrl.cpp  vision_node.cpp
AutoNOMOS_simulation/src/autonomos_simulation/launch/: ros_autonomos.launch
AutoNOMOS_simulation/src/carFiles/ackermann_gazebo_plugin/: .gitignore  CMakeLists.txt  mainpage.dox
AutoNOMOS_simulation/src/carFiles/car_like_simulation/: .gitignore  car_like_simulation.launch  car_like_simulation_lite.launch  manifest.xml
AutoNOMOS_simulation/src/carFiles/car_like_simulation/scripts/: cmdvel_to_cardrive.py
Gazebo_plugin/: CMakeLists.txt  autonomos_plugin.cc
src/GazeboModel/: car_like.sdf  car_like_without_control.sdf
src/Gazebo_plugin/: CMakeLists.txt  autonomos_plugin.cc  package.xml
src/Gazebo_plugin/include/: autonomos_ideal_plugin.h  autonomos_plugin.h  obstacles.h  plot_tree.hh
src/Gazebo_plugin/include/utilities/: ros_timer.hpp
src/Gazebo_plugin/msg/: Line_Segment.msg
src/Gazebo_plugin/src/: autonomos_ideal_plugin.cc  autonomos_plugin.cc  obstacles.cc  parking_lot.cc  parking_lot.hh  plot_tree.cc
src/Gazebo_plugin/src/utilities/: ros_timer.cpp
src/Gazebo_plugin/srv/: gz_visual_line.srv  obstacles_array.srv  trajectory_segment.srv
src/ackermann_gazebo_plugin/: carlikemodel.launch
src/ackermann_gazebo_plugin/include/: ackermann_plugin.h
src/ackermann_gazebo_plugin/src/: ackermann_plugin.cpp
src/autonomos_gazebo/: CMakeLists.txt  package.xml
src/autonomos_gazebo/AutoNOMOS_curved_road/: model.config  model.sdf
src/autonomos_gazebo/AutoNOMOS_mini/: model.config  model.sdf
src/autonomos_gazebo/AutoNOMOS_mini_Intersection/: model.sdf
src/autonomos_gazebo/AutoNOMOS_straight_road/: model.config  model.sdf
src/autonomos_gazebo/config/: autonomos_gazebo_control.yaml
src/autonomos_gazebo/launch/: empty_autonomous.launch  intersection.launch  straight_road.launch
src/autonomos_gazebo/models/AutoNOMOS_curved_road/: model.sdf
src/autonomos_gazebo/models/AutoNOMOS_mini/: model.sdf
src/autonomos_gazebo/models/AutoNOMOS_mini_Intersection/: model.sdf
src/autonomos_gazebo/models/AutoNOMOS_straight_road/: model.config
src/autonomos_gazebo/plugins/: velocity_plugin.cc
src/autonomos_gazebo/worlds/: curved_road.world  intersection.world  straight_road.world
src/autonomos_gazebo_simulation/: CMakeLists.txt
src/autonomos_gazebo_simulation/launch/: curved_road.launch  empty_autonomous.launch  intersection.launch  straight_road.launch
src/autonomos_gazebo_simulation/media/materials/scripts/: percent_0.material  percent_0to10.material  percent_10.material  percent_100.material  percent_20.material  percent_30.material  percent_40.material  percent_50.material  percent_60.material  percent_70.material  percent_80.material  percent_90.material
src/autonomos_gazebo_simulation/models/AutoNOMOS_mini/: model.sdf
src/autonomos_gazebo_simulation/models/AutoNOMOS_mini_ideal/: model.config  model.sdf
src/autonomos_gazebo_simulation/models/AutoNOMOS_mini_static/: model.sdf
src/autonomos_gazebo_simulation/models/circuit2way_curved_v2/: model-1_4.sdf  model.config
src/autonomos_gazebo_simulation/models/circuit2way_curved_v2/meshes/: circuit_s.dae
src/autonomos_gazebo_simulation/models/circuit2way_straight/: model-1_4.sdf
src/autonomos_gazebo_simulation/models/circuit2way_straight/meshes/: circuit_oval.dae  circuit_oval_backup.dae  circuit_s.dae  circuit_straight.dae
src/autonomos_gazebo_simulation/models/curved_road/: model.config  model.sdf
src/autonomos_gazebo_simulation/models/lamp_post_autonomos/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/autonomos_gazebo_simulation/models/obstacle_cube/: model.config  model.sdf
src/autonomos_gazebo_simulation/models/parking_space/: model.sdf
src/autonomos_gazebo_simulation/models/pista_doble_carril/: model-1_4.sdf  model.config
src/autonomos_gazebo_simulation/models/pista_tripe_sc_blender/: model-1_4.sdf  model.config  tripe_sc_blender.dae
src/autonomos_gazebo_simulation/models/pista_triple_blender/: model-1_4.sdf  model.config
src/autonomos_gazebo_simulation/models/pista_triple_carril/: model-1_4.sdf  model.config
src/autonomos_gazebo_simulation/models/straight_road/: model.config  model.sdf
src/autonomos_gazebo_simulation/src/: robot_pose_publisher.cpp
src/autonomos_gazebo_simulation/worlds/: autoNOMOS_curved_road.world  autoNOMOS_empty_world.world  autoNOMOS_parallel_parking.world  autoNOMOS_parking_lot.world  autoNOMOS_single_obstacle.world  autoNOMOS_straight_road.world  autoNOMOS_straight_road_v2.world  curved_road.world  curved_road_v2.world  multiple_obstacles.world  pista_dos_carriles.world  pista_tres_carriles.world  straight_road.world  straight_road_v2.world
src/autonomos_simulation/: CMakeLists.txt  autoNOMOS_gazebo_bridge.cpp  intersection_localization_node.cpp  package.xml  perception_node.cpp  tf2_broadcaster_node.cpp  vision_node.cpp
src/autonomos_simulation/launch/: ros_autonomos.launch
src/carFiles/GazeboModel/: manifest.xml
src/carFiles/ackermann_gazebo_plugin/: manifest.xml
src/car_like/: model.sdf
src/car_like_simulation/: car_like.urdf.xarco
src/carlike_local_planner/: .gitignore  CMakeLists.txt  point_grid
src/carlike_local_planner/src/: trajectory_planner.cpp
(+8 files in other folders)
